--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<input type="text" id="name" placeholder="Name">
+		<input type="tel" id="phone" placeholder="Phone Number">
+		<input type="text" id="address" placeholder="Address">
+		<input type="checkbox">Have you ever lived with a Dog before?
+		<select>
+			<option disabled selected>Please select your preferred breeds</option>
+			<option>Labrador</option>
+			<option>Golden Retriever</option>
+			<option>Rottweiler</option>
+		</select>
+		<input type="submit" id="submit" value="Submit">
+	</form>
 
 </body>
 
