--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 </script>
 	<form>
 		<input type="text" id="name" placeholder="Name">
-		<input type="tel" id="phone" placeholder="Phone Number">
+		<input type="text" id="phone" placeholder="Phone Number">
 		<input type="text" id="address" placeholder="Address">
-		<input type="checkbox">Have you ever lived with a Dog before?
-		<select>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">Have you ever lived with a Dog before?
+		<select id="multiSelect">
 			<option disabled selected>Please select your preferred breeds</option>
 			<option>Labrador</option>
 			<option>Golden Retriever</option>
